--- a/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
+++ b/SchoolBusWXWeb/Views/SchoolBus/Register.cshtml
@@ -76,7 +76,7 @@
                         <button style="width: 45%; float: right" id="generateCode" onclick="sendSmsCode()" type="button" class="check_code">
                             获取验证码
                         </button>
-                        @*<input type="button" id="generateCode" onclick="sendSmsCode()" value="获取验证码" style="width: 45%; float: right" class="check_code"/>*@
+                        @*<input type="button" id="generateCode" onclick="sendSmsCode()" value="获取验证码" style="width: 45%; float: right" class="check_code" />*@
                     </div>
                 </div>
                 <div class="agree mui-input-row mui-checkbox mui-left">
@@ -710,6 +710,7 @@
     <!--弹出层（通过）结束-->
 
     <script src="~/lib/jquery/jquery.2.1.4.min.js"></script>
+    <script src="~/js/tools.js"></script>
     <script src="~/lib/mui/js/mui.min.js"></script>
     <script src="~/lib/mui/js/mui.picker.all.js"></script>
     <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
@@ -749,23 +750,32 @@
                 })
             });
         });
+
         // 注册
         $('#frm').submit(function () {
-            if ($('#checkbox').is(':checked') && $(this).valid()) {
-                $.ajax({
-                    url: this.action,
-                    type: this.method,
-                    data: $(this).serialize(),
-                    success: function (result) {
-                        console.log(result);
-                    },
-                    error: function (result) {
-                        console.log(result);
-                    },
-                    complete: function (XMLHttpRequest, textStatus) {
+            if ($('#checkbox').is(':checked')) {
+                if ($(this).valid()) {
+                    $.ajax({
+                        url: this.action,
+                        type: this.method,
+                        data: $(this).serialize(),
+                        success: function (result) {
+                            if (result.status == 1) {
+                                window.location.href ="/SchoolBus/GoBinding"
+                            } else {
+                                alert(result.msg);
+                            }
+                        },
+                        error: function (result) {
+                            console.log(result);
+                        },
+                        complete: function (XMLHttpRequest, textStatus) {
 
-                    }
-                });
+                        }
+                    });
+                }
+            } else {
+                alert("请先确认条款信息！");
             }
             return false;
         });
@@ -788,6 +798,7 @@
                 settime();
             }, 1000);
         }
+
         // 发短信
         function sendSmsCode() {
             var phone = $("#phoneNum").val();
@@ -804,40 +815,8 @@
                 alert("请输入手机号");
             }
         }
-        // 通用ajax+防止csrf
-        function getAjax(url, parm, callBack, cmBack) {
-            var form = $("#frm");
-            var token = $('input[name="__RequestVerificationToken"]', form).val();
-            parm.__RequestVerificationToken = token;
-            $.ajax({
-                type: 'post',
-                url: url,
-                data: parm,
-                //async: false,
-                success: function (msg) {
-                    callBack(msg);
-                },
-                error: function (result) {
-                },
-                complete: function (XMLHttpRequest, textStatus) {
-                    cmBack();
-                }
-            });
-        }
 
-        //getAjax("/TeYue/SaveAndTJ",  { id: aid, title: tit, contents: content }, function (data) {
-        //    if (data.result) {
-        //        window.location.href = "/TeYue/ArIndex?type=1";
-        //    } else {
-        //        alert("保存并且提交失败");
-        //    }
-        //}, function () {
-        //    $('#save').removeAttr("disabled");
-        //    $('#tijiao').removeAttr("disabled");
-        //});
-
-
-
+        // 服务条款
         function popoverClick(d) {
             $(d).show();
             $(d).width($(window).width()).height($(window).height());
@@ -845,6 +824,7 @@
             $(d).find(".popover").css({ "margin-top": -$(d).find(".popover").height() / 2, "top": "50%" });
         }
 
+        // 关闭服务条款
         function popClose(d) {
             $(d).hide();
             $("body").css("overflow", "auto");
